# Agentic-Chatbot

./: README.md  main.py  pyproject.toml
AINews/: daily_summary.md
LLMS/: groqllm.py
graph/: graph_builder.py
nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_tool_node.py
state/: state.py
tools/: search_tool.py
ui/: uiconfigfile.py
ui/streamlit_ui/: display_result.py  loadui.py
